--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,18 @@
   "short_name": "Calculator",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "./assets/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-384.png",
+      "src": "./assets/icon-384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/icon-512.png",
+      "src": "./assets/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
