update start url

--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
   ],
   "theme_color": "#FFFFFF",
   "background_color": "#FFFFFF",
-  "start_url": "/",
+  "start_url": "/calculator-app",
   "display": "standalone",
   "orientation": "portrait"
 }
